# ark-algebra

ec/: Cargo.toml
ff/: Cargo.toml
poly/: Cargo.toml
poly-benches/: Cargo.toml
serialize/: Cargo.toml
test-curves/: Cargo.toml
test-templates/: Cargo.toml
