[package]
name = "ark-test-curves"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "A library for testing ark-ec & ark-poly"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-test-curves/"
keywords = ["cryptography", "serialization" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-std = {git = "https://github.com/ChorusOne/std", branch = "giulio/random_feature", default-features = false}
ark-ff = {path = "../ff", default-features = false }
ark-ec = {path = "../ec", default-features = false }

[dev-dependencies]
ark-serialize = { path = "../serialize", default-features = false }
ark-algebra-test-templates = {path = "../test-templates", default-features = false }

[features]
default = []

asm = [ "ark-ff/asm" ]

parallel = [ "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]

bls12_381_scalar_field = []
bls12_381_curve = [ "bls12_381_scalar_field" ]

mnt4_753_scalar_field = []
mnt4_753_base_field = []
mnt4_753_curve = [ "mnt4_753_scalar_field", "mnt4_753_base_field" ]

bn384_small_two_adicity_scalar_field = []
bn384_small_two_adicity_base_field = []
bn384_small_two_adicity_curve = [ "bn384_small_two_adicity_scalar_field", "bn384_small_two_adicity_base_field" ]
